# quinielator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.toml
data/fixtures/: README.md
docs/: FUENTES_DE_DATOS.md  IMPLEMENTATION_PROMPT.md  MANUAL_DE_USO.md  METODOLOGIA.md  MODELOS.md  RESULTADOS.md
docs/resultados-2026/: README.md  features_ensemble_2026.csv  features_ensemble_2026.md  features_ensemble_2026_groups.csv  mundial_2026_ensemble.csv  mundial_2026_ensemble.html  mundial_2026_ensemble.md  mundial_2026_ensemble_por_fase.csv
reports/: README.md
src/quinielator/: __init__.py  __main__.py  cli.py  config.py
src/quinielator/data/: __init__.py  downloader.py  normalizer.py  repository.py  sources.py  validator.py
src/quinielator/domain/: __init__.py  entities.py
src/quinielator/evaluation/: __init__.py  feature_importance.py  metrics.py  reporting.py  walk_forward.py  world_cup_report.py
src/quinielator/features/: __init__.py  elo.py  engineer.py
src/quinielator/models/: __init__.py  base.py  baseline.py  ensemble.py  keras_model.py  registry.py  sklearn_models.py
src/quinielator/presentation/: __init__.py  interactive.py
src/quinielator/services/: __init__.py  application.py
src/quinielator/training/: __init__.py  trainer.py
tests/: conftest.py  test_domain.py  test_elo.py  test_feature_importance.py  test_features.py  test_interactive.py  test_metrics.py  test_models.py  test_validator.py  test_world_cup_2026_source.py  test_world_cup_report.py
