[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quinielator"
version = "0.1.0"
description = "Laboratorio local y didáctico de predicción temporal de Mundiales de fútbol"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Omar Arias" }]
dependencies = [
  "joblib>=1.4,<2",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",
  "scipy>=1.13,<2",
]

[project.optional-dependencies]
keras = ["tensorflow>=2.16,<3"]
dev = [
  "mypy>=1.13,<2",
  "pandas-stubs>=2.2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
quinielator = "quinielator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=quinielator --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["quinielator"]
warn_unused_ignores = true
ignore_missing_imports = true
